Kurzbeschreibung der Emblemontology

--- a/public/ontology/emblem.html
+++ b/public/ontology/emblem.html
@@ -8,6 +8,7 @@
           th, td { padding: 0.25em 0.5em; }
         </style><link rel="schema.DCTERMS" href="http://purl.org/dc/terms/">
       <meta name="DCTERMS.title" content="Wolfenbüttel Core Emblem Ontology">
+      <meta name="DCTERMS.description" content="Ontology to describe the emblems of the Wolfenbüttel emblem collection. The ontology was created during the project &#34;Emblematica Online – Linked Open Emblem Data&#34; (2015–2017), funded by the German Research Association.">
       <meta name="DCTERMS.creator" content="Monika Biel">
       <meta name="DCTERMS.creator" content="David Maus">
       <meta name="DCTERMS.relation" content="Project &#34;Linked Open Emblem Data&#34; (2015-2017)">
@@ -31,6 +32,13 @@
          <li>David Maus &lt;maus@hab.de&gt;</li>
          <li>Monika Biel &lt;biel@hab.de&gt;</li>
       </ul>
+      <div>
+         Ontology to describe the emblems of the Wolfenbüttel emblem collection. The ontology
+         was created during the
+         project "Emblematica Online – Linked Open Emblem Data" (2015–2017), funded by the
+         German Research Association.
+         
+      </div>
       <h2>See also</h2>
       <ul>
          <li><a href="http://diglib.hab.de?link=016" target="_blank">Project "Linked Open Emblem Data" (2015-2017)</a></li>
